feat: Implement community comments feature and enhance reservation system
- Added CommunityCommentController for handling user and owner comments.
- Created Comment entity and CommunityCommentService for comment management.
- Introduced Review entity and ReviewRepository for business reviews.
- Added PaymentStatus and ReservationStatus enums for better reservation handling.
- Enhanced store API with full payment reservation functionality.
- Updated StoreDetail and StoreReserve components to support new reservation features.
- Improved error handling and user feedback in reservation processes.